workday/12.1/modules/ROOT/pages/workday-reference.adoc
= Workday Connector 12.1 Reference - Mule 4
:page-aliases: connectors::workday/workday-reference.adoc


Workday API version 34

Anypoint Connector for Workday (Workday Connector) provides access to standard Workday operations.

== Configurations
---
[[config-version-34]]
=== Configuration Version 34

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<config-version-34_basic-authentication-api-v34, Basic Authentication Api V34>> {nbsp}
* <<config-version-34_x509-authentication, x.509 Authentication>> {nbsp}
| The connection types to provide to this configuration. | | x
| Time Zone a| String |  Choose your timezone. Time zone needs to be in the format 'UTC+01:00' |  UTC | {nbsp}
| Encoding a| String |  Value that overrides the default Mule encoding value. The value must be one of the standard encoding values, for example, `UTF-8`. |  | {nbsp}
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field | 60 |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  SECONDS |
| Expiration Policy a| <<ExpirationPolicy>> | Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

=== Connection Types

[[config-version-34_basic-authentication-api-v34]]
==== Basic Authentication Workday API v34

Uses your Workday username and password for authenticating the connection. 

====== Parameters
[%header%autowidth.spread]
|======================
| Name | Type | Description | Default Value | Required
| Proxy Configuration a| One of:

* <<Default>>
* <<NTLM>> |  |  | {nbsp}
| Password a| String |  Password associated with the User Name |  | *x*{nbsp}
| Host name a| String |  Host name of your Workday instance |  `impl-cc.workday.com` | {nbsp}
| Tenant name a| String |  Workday tenant name or ID. Use expressions in this field to configure a connection for multiple tenants. |  | *x*{nbsp}
| User Name a| String |  User name |  | *x*{nbsp}
| Use Persistent Connections a| Boolean |  If false, each connection is closed after the first request is completed. |  true | {nbsp}
| Max Connections a| Number |  Maximum number of outbound connections to keep open concurrently. By default, the number of connections is unlimited. |  -1 | {nbsp}
| Connection Idle Timeout a| Number | Amount of time that a connection can remain idle before it is closed. The value of this attribute is used only when persistent connections are enabled. |  30 | {nbsp}
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Unit of time for Connection Idle Timeout |  SECONDS | {nbsp}
| Stream Response a| Boolean |  Whether or not to stream received responses, meaning processing continues as soon as all headers are parsed and the body is streamed as it arrives. When enabled, the response must eventually be read since, depending on the configured buffer size, it might not fit into memory and processing stops until space is available. |  false | {nbsp}
| Response Buffer Size a| Number |  The space in bytes for the buffer where the HTTP response will be stored. |  -1 | {nbsp}
| Connection Timeout a| Number |  The number of units that a connection can remain idle before it is closed. The value of this attribute is used only when persistent connections are enabled. |  30 | {nbsp}
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for Connection timeout |  SECONDS | {nbsp}
| TLS Configuration a| <<Tls>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`. |  | {nbsp}
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  | {nbsp}
|======================


[[config-version-34_x509-authentication]]
==== x.509 Authentication Workday API v34

Uses a x.509 certificate to authenticate the connection.

====== Parameters
[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|======================
| Name | Type | Description | Default Value | Required
| Proxy Configuration a| One of:

* <<Default>>
* <<NTLM>> |  |  | {nbsp}
| Host name a| String |  Host name of your Workday instance. |  impl-cc.workday.com | {nbsp}
| Tenant name a| String |  Workday tenant name or ID. Use expressions in this field to configure a connection for multiple tenants. |  | *x*{nbsp}
| User Name a| String |  The user name |  | *x*{nbsp}
| Use Persistent Connections a| Boolean |  If false, each connection will be closed after the first request is completed. |  true | {nbsp}
| Max Connections a| Number |  Maximum number of outbound connections to keep open at the same time. By default, the number of connections is unlimited. |  -1 | {nbsp}
| Connection Idle Timeout a| Number |  Amount of time that a connection can remain idle before it is closed. The value of this attribute is used only when persistent connections are enabled. |  30 | {nbsp}
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for Connection idle timeout |  SECONDS | {nbsp}
| Stream Response a| Boolean |  Whether or not to stream received responses, meaning processing continues as soon as all headers are parsed and the body is streamed as it arrives. When enabled, the response must eventually be read since, depending on the configured buffer size, it might not fit into memory and processing stops until space is available. |  false | {nbsp}
| Response Buffer Size a| Number |  The space in bytes for the buffer where the HTTP response will be stored. |  -1 | {nbsp}
| Connection Timeout a| Number | Amount of time that a connection can remain idle before it is closed. The value of this attribute is used only when persistent connections are enabled. |  30 | {nbsp}
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for Connection Timeout |  SECONDS | {nbsp}
| TLS Configuration a| <<Tls>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`. |  | {nbsp}
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | {nbsp}
| Key Store Path a| String |  Location of the keystore file |  | *x*{nbsp}
| Type a| Enumeration, one of:

** JKS
** PKCS12
** JCEKS |  Type of the keystore |  JKS | {nbsp}
| Password a| String |  Password to access the keystore |   | {nbsp}
| Alias a| String |  Alias of the private key to use |  | *x*{nbsp}
| Signature Algorithm a| Enumeration, one of:

** RSA_SHA1
** RSA_SHA256 | Signature algorithm to use |  RSA_SHA1 | {nbsp}
| Digest Algorithm a| Enumeration, one of:

** SHA256
** SHA512 | Digest algorithm to use |  SHA256 | {nbsp}
| Canonicalization algorithm a| Enumeration, one of:

** CANONICAL_XML_1_0
** CANONICAL_XML_1_1
** EXCLUSIVE_XML_CANONICALIZATION_1_0 |  The c14n (canonicalization) algorithm to use. |  EXCLUSIVE_XML_CANONICALIZATION_1_0 | {nbsp}
|======================


== Input Source

[[modified-objects-listener]]
=== On Modified Objects
`<workday:modified-objects-listener>`

Initiates a flow when an instance of the specified Workday object type is created, modified, or deleted.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Watermark Enabled a| Boolean | If you enable this field, Mule processes an item just once, even if it receives the item multiple times.  | false |
| Object Type a| String
a|  The Workday object type that applies to this input source. The following object types are supported:

** JOB_PROFILES
** WORKERS
** POSITIONS
** EVERGREEN_REQUISITIONS
** JOB_REQUISITIONS |  | x
| Updated From a| String |  Required date format is 'yyyy-MM-dd'T'HH:mm:ss.SSS' |  |
| Encoding a| String | The value that overrides the default runtime encoding value. The value must be one of the standard encoding values, such as UTF-8. Refer to the `java.nio.charset.StandardCharsets` Javadoc for the format and valid values for this field.  |  |
| Scheduling Strategy a|

* <<fixed-frequency,Fixed Frequency>>
* <<cron,Cron>>
 |  Configures the scheduler that triggers the polling |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

== Operations

* <<absenceManagement>>
* <<academicAdvising>>
* <<academicFoundation>>
* <<admissions>>
* <<adoption>>
* <<benefitsAdministration>>
* <<campusEngagement>>
* <<cashManagement>>
* <<compensation>>
* <<compensationReview>>
* <<dynamicDocumentGeneration>>
* <<externalIntegrations>>
* <<financialAid>>
* <<financialManagement>>
* <<humanResources>>
* <<identityManagement>>
* <<integrations>>
* <<inventory>>
* <<learning>>
* <<notification>>
* <<payroll>>
* <<payrollCAN>>
* <<payrollFRA>>
* <<payrollGBR>>
* <<payrollInterface>>
* <<performanceManagement>>
* <<professionalServicesAutomation>>
* <<recruiting>>
* <<resourceManagement>>
* <<revenueManagement>>
* <<settlementServices>>
* <<staffing>>
* <<studentCore>>
* <<studentFinance>>
* <<studentRecords>>
* <<studentRecruiting>>
* <<talent>>
* <<tenantDataTranslation>>
* <<timeTracking>>
* <<workdayConnect>>
* <<workdayExtensibility>>
* <<workforcePlanning>>

[[absenceManagement]]
=== Absence Management

`<workday:absence-management>`

Invoke the Absence Management web service. The Absence Management web service contains operations that expose absence-related data, including employee time off and absence inputs for time off and accrual adjustments and overrides, and leave requests, in Workday Human Capital Management business services.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws

* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[academicAdvising]]
=== Academic Advising
`<workday:academic-advising>`


Invoke the Academic Advising web service. Retrieve objects related to academic advising, such as student academic requirement assignments.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String | Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[academicFoundation]]
=== Academic Foundation
`<workday:academic-foundation>`


Invoke the Academic Foundation web service. Public web service for creating, editing, and retrieving the foundational objects for the student system, such as programs of study, educational institutions, and other objects with cross-module uses.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[admissions]]
=== Admissions
`<workday:admissions>`


Invoke the Admissions web service, which is a web service for creating, editing, and retrieving objects related to admissions and applicants.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[adoption]]
=== Adoption

`<workday:adoption>`


This operation invokes the Adoption web service.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[benefitsAdministration]]
=== Benefits Administration
`<workday:benefits-administration>`


Invoke the Benefits Administration web service. The Benefits Administration web service contains operations that expose Workday human capital management business services benefits-related data.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[campusEngagement]]
=== Campus Engagement
`<workday:campus-engagement>`


Invoke the Campus Engagement web service, which is a public web service for creating, editing, and retrieving objects related to planning and organizing communication between student prospects and recruiters.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[cashManagement]]
=== Cash Management
`<workday:cash-management>`


Invoke the Cash Management web service, which contains operations that expose Workday financials cash management data. The Cash Management web service includes data relative to banking.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[compensation]]
=== Compensation
`<workday:compensation>`


Invoke the Compensation web service, which contains operations that expose compensation data related to Workday Human Capital Management Business Services.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[compensationReview]]
=== Compensation Review
`<workday:compensation-review>`


Invoke the Compensation Review web service, which contains operations that expose the Workday human capital management business services compensation review related data.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[dynamicDocumentGeneration]]
=== Dynamic Document Generation
`<workday:dynamic-document-generation>`


Invoke the Dynamic Document Generation web service. Create, edit, and retrieve objects related to document templates, such as text blocks and text block categories.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[externalIntegrations]]
=== External Integrations
`<workday:external-integrations>`


Invoke the External Integrations web service, which provides an operation that informs external systems of integration events that have been triggered from within Workday. The WSDL for this service provides the structure that needs to be implemented by an external system to receive event launch information.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[financialAid]]
=== Financial Aid
`<workday:financial-aid>`


Invoke the Financial Aid web service for the Financial Aid module.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[financialManagement]]
=== Financial Management
`<workday:financial-management>`


Invoke the Financial Management web service, which contains operations that expose Workday Financials data. It includes data relative to accounts, accounting, business plans, financial reporting, tax, financial organizations, basic worktags, related worktags, and more.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[humanResources]]
=== Human Resources
`<workday:human-resources>`


Invoke the Human Resources web service. The Human Resources web service contains operations that expose Workday Human Capital Management Business Services data, including employee, contingent worker and Organization information. This web service can be used for integration with enterprise systems including corporate directories, data analysis tools, email, other provisioning sub-systems, or any other systems needing worker, and/or organization data.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[identityManagement]]
=== Identity Management
`<workday:identity-management>`


Invoke the Identity Management web service, which contains operations that relate to Workday identity and access management.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[integrations]]
=== Integrations
`<workday:integrations>`


Invoke the Integrations web service, which contains operations related to all integrations within the Workday system.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[inventory]]
=== Inventory
`<workday:inventory>`


Invoke the Inventory web service, which contains operations that expose Workday Financials Inventory data.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[learning]]
=== Learning
`<workday:learning>`


Invoke the Learning web service. The Learning web service contains operations for creating, editing, and retrieving Workday Learning-related data such as courses, course offerings, and enrollments.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[notification]]
=== Notification
`<workday:notification>`


Invoke the Notification web service, which provides an operation that informs external systems about business events that occur within Workday. The WSDL for this service provides the structure that needs to be implemented by an external system to receive notifications for their subscribed Workday business events. Subscriptions and Notification details, such as endpoint and security information, are defined within the Workday application.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[payroll]]
=== Payroll
`<workday:payroll>`


Invoke the Payroll web service, which contains operations that expose Workday Payroll data for integration with third parties, such as time and attendance.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[payrollCAN]]
=== Payroll CAN
`<workday:payroll-can>`


Invoke the Payroll CAN web service, which contains operations that expose Workday Payroll Canadian data for integration with third parties, such as time and attendance.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[payrollFRA]]
=== Payroll FRA
`<workday:payroll-fra>`


Invoke the Payroll FRA web service, which contains operations that expose Workday Payroll France data for integration with third parties.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[payrollGBR]]
=== Payroll GBR
`<workday:payroll-gbr>`


Invoke the Payroll GBR web service, which contains operations that expose Workday UK Payroll data for integration with third parties.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[payrollInterface]]
=== Payroll Interface
`<workday:payroll-interface>`


Invoke the Payroll Interface web service, which contains operations that expose Workday Human Capital Management Business Services data for integration with external payroll systems.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[performanceManagement]]
=== Performance Management
`<workday:performance-management>`


Invoke the Performance Management web service, which contains operations that expose Workday Employee Performance Management Business Services data. This web service can be used for integration with other employee performance management systems.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[professionalServicesAutomation]]
=== Professional Services Automation
`<workday:professional-services-automation>`


Invoke the Professional Services web service, which contains operations that expose Workday Financials Business Services data for integration with Professional Services Automation (PSA) systems.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[recruiting]]
=== Recruiting
`<workday:recruiting>`


Invoke the Recruiting web service, which contains operations that expose Workday Human Capital Management Business Services data for integration with talent management and applicant tracking systems.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[resourceManagement]]
=== Resource Management
`<workday:resource-management>`


Invoke the Resource Management web service, which contains operations that expose Workday Financials Resource Management data. The Resource Management web service includes data relative to suppliers, supplier accounts, expenses, business assets, and projects.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[revenueManagement]]
=== Revenue Management
`<workday:revenue-management>`


Invoke the Revenue Management web service, which contains operations that expose Workday Financials Revenue Management data. The Revenue Management web service includes data relative to customers, customer accounts, prospects, and opportunities.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[settlementServices]]
=== Settlement Services
`<workday:settlement-services>`


Invoke the Settlement Services web service, which is used for settlement management and services.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[staffing]]
=== Staffing
`<workday:staffing>`


Invoke the Staffing web service, which exposes Workday human capital management business services and data. These services pertain to staffing transactions for both employees and contingent workers, such as bringing employees and contingent workers on board.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[studentCore]]
=== Student Core
`<workday:student-core>`

Invoke the Student Core Web Service, which is used for creating, editing, and retrieving objects related to students' personal information, such as Student Documents.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Operation a| String | Type of operation to execute |  | x
| Content a| Binary |  Payload for the operation |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure to use repeatable streams |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR

[[studentFinance]]
=== Student Finance
`<workday:student-finance>`


Invoke the Student Finance web service, which is used for creating, editing, and retrieving objects related to student finance, such as charges and payments for students.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[studentRecords]]
=== Student Records
`<workday:student-records>`


Invoke the Student Records web service, which is used for creating, editing, and retrieving objects related to student records, such as student courses, sections, and so forth.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[studentRecruiting]]
=== Student Recruiting
`<workday:student-recruiting>`


Invoke the Student Recruiting web service, which is used for creating, editing, and retrieving objects related to student recruiting, such as student recruiting events, campaigns, cycles, recruiters, and prospects.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[talent]]
=== Talent
`<workday:talent>`


Invoke the Talent web service, which consists of operations for interfacing with the Workday Talent Management web service operations.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[tenantDataTranslation]]
=== Tenant Data Translation
`<workday:tenant-data-translation>`


Invoke the Tenant Data Translation web service, which is a public web service for exporting and importing translatable tenant data.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[timeTracking]]
=== Time Tracking
`<workday:time-tracking>`


Invoke the Time Tracking web service, which contains operations for importing and exporting time and work schedule information.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[workdayConnect]]
=== Workday Connect
`<workday:workday-connect>`


Invoke the Workday Connect web service, which contains Get and Put web services used for communication capabilities across applications.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[workdayExtensibility]]
=== Workday Extensibility
`<workday:workday-extensibility>`


Invoke the Workday Extensibility web service, which is a public web service for extensibility features across applications.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR


[[workforcePlanning]]
=== Workforce Planning
`<workday:workforce-planning>`


Invoke the Workforce Planning web service, which contains operations that expose Workforce Planning business services and data.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Operation a| String |  Type of operation to execute. |  | x
| Content a| Binary |  Payload for the operation. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Response Timeout a| Number |  How long to wait for a response, based on the unit in the Response Timeout field  |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The unit for the Response Timeout parameter |  |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The result is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy for connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|Attributes Type | <<SoapAttributes>>
|===

=== For Configurations
* <<config-version-34>>

==== Throws
* WORKDAY:CONNECTIVITY
* WORKDAY:PROCESSING_ERROR
* WORKDAY:RETRY_EXHAUSTED
* WORKDAY:VALIDATION_ERROR

== Types
[[Tls]]
=== TLS

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  |
|===

[[TrustStore]]
=== Trust Store

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which is resolved relative to the current classpath and file system, if possible) of the trust store. |  |
| Password a| String | The password used to protect the trust store. |  |
| Type a| String | The type of trust store used. |  |
| Algorithm a| String | The algorithm used by the trust store. |  |
| Insecure a| Boolean | If true, no certificate validations are performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Key Store

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which is resolved relative to the current classpath and file system, if possible) of the key store. |  |
| Type a| String | The type of key store used. |  |
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file is used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the key store. |  |
| Algorithm a| String | The algorithm used by the key store. |  |
|===

[[standard-revocation-check]]
=== Standard Revocation Check

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server cannot be reached or is busy. |  |
|===

[[custom-ocsp-responder]]
=== Custom OCSP Responder

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  |
|===

[[crl-file]]
=== CRL File

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds). | |
| Count a| Number | The number of reconnection attempts to make. | |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** DAYS
** HOURS
** MICROSECONDS
** MILLISECONDS
** MINUTES
** NANOSECONDS
** SECONDS | A time unit that qualifies the *Max Idle Time* attribute. |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is SHA-256. |  |
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property can be set only if Use Secure Hash is false. |  |
| Object Store a| Object Store | The object store where the redelivery counter for each message is stored. |  |
|===

[[SoapAttributes]]
=== SOAP Attributes

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Transport Additional Data a| Object |  |  |
| Transport Headers a| Object |  |  |
|======================

[[repeatable-in-memory-stream]]
=== Repeatable In-Memory Stream

When streaming in this mode, Mule does not use the disk to buffer the contents. If you exceed the buffer size, the message fails.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory that is allocated to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used, then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

File store repeatable streams require buffering, and there are different buffering strategies. Mule keeps a portion of contents in memory. If the stream contents are larger than the configured buffer size, Mule backs up the buffer’s content to disk and then clears the memory.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed, then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[non-repeatable-stream]
=== Non-repeatable Stream

Disable the repeatable stream functionality and use non-repeatable streams to have less performance overhead, memory use, and cost.

[[Default]]
=== Default

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Host a| String |  |  | x
| Port a| Number |  |  | x
| Username a| String |  |  |
| Password a| String |  |  |
| Non Proxy Hosts a| String |  |  |
|===

[[NTLM]]
=== NTLM

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Ntlm Domain a| String |  |  | x
| Host a| String |  |  | x
| Port a| Number |  |  | x
| Username a| String |  |  |
| Password a| String |  |  |
| Non Proxy Hosts a| String |  |  |
|===

[[fixed-frequency]]
=== Fixed Frequency

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Frequency a| Number | The frequency at which the Scheduler initiates the flow, based on the time unit specified in the Time Unit field. The default frequency is 1000ms (1s). | 1000ms | *
| Start delay a| Number | The amount of time that the Scheduler waits before initiating the flow for the first time after the app starts. This value is based on the time unit specified in the Time Unit field. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the frequency value | MILLISECONDS | *
|======================

[[cron]]
=== Cron

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Expression a| String | Cron expression|  | *
| Time zone a| String | ID of the time zone on which to base the expression. Refer to the java.util.TimeZone Javadoc for the format and valid values for this ID. |  |
|======================

== See Also

* xref:release-notes::connector/workday-connector-release-notes-mule-4.adoc[Workday Connector Release Notes]
* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
